--- a/introduction.tex
+++ b/introduction.tex
@@ -88,7 +88,7 @@ The external case is dative. The predicate \tit{galaubjaiþ} `believe' takes dat
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the dative case. This dative can only come from the predicate \tit{taujau} `do', which is the external case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} {sent}\scsub{[acc]} he\\
+that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} \ac{comp} {sent}\scsub{[acc]} he\\
 `that you believe on (him) whom he has sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc}
 
 % \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
